[package]
name = "valkey-auth"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry Polyakovsky", "Karthik Subbarao"]
license = "BSD-3-Clause"
repository = "https://github.com/dmitrypol/valkey-auth"
readme = "README.md"
description = "module to support auth mechanisms for Valkey"
homepage = "https://github.com/dmitrypol/valkey-auth"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
valkey-module = "0.1.0"

[lib]
crate-type = ["cdylib"]